fix: following/global alignment on mobile devices

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -91,9 +91,6 @@
     max-width: 100%;
     display: flex;
     justify-content: flex-end;
-    .is-sticky {
-      margin-right: -10px;
-    }
     .sidebar-item {
       display: none;
     }
@@ -107,7 +104,7 @@
     }
   }
   @media (max-width: 554px) and (min-width: 432px) {
-    padding-top: 38px;;
+    padding-top: 38px;
   }
 }
 
